--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
-                <ahref="img.tool.html" class="tool-card" style+'text-decoration: none; color: inherit;">
+                <ahref="Tools/img.tool.html" class="tool-card" style+'text-decoration: none; color: inherit;">
                 <div>
                     <h4 class="footer-heading">Popular Tools</h4>
                     <ul class="footer-links">
